--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
+spring.config.import=file:env.properties
 spring.application.name=anime
-spring.datasource.url=jdbc:mysql://localhost:3307/anime_db
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PW}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
